# hakimi-codex

./: .gitignore  LICENSE  README.md  hakimi.bat  hakimi.sh  install.bat  install.sh  pyproject.toml  random_generator.py  requirements.txt  setup.py  test_clipboard_encoding.py  test_clipboard_formats.py  test_history_export_import.py  test_kimi_api.py  test_main_screen_bindings.py
codex/: __init__.py  __main__.py  app.py
codex/core/: __init__.py  chat_engine.py  chat_history.py  code_block_applier.py  code_sandbox.py  command_handler.py  config.py  diff_utils.py  git_utils.py  llm_client.py  models.py  project_analyzer.py  prompts.py  settings_manager.py  token_tracker.py  tool_parser.py  tools.py
codex/core/agents/: __init__.py  agent_runner.py  models.py  orchestrator.py  specialist_prompts.py
codex/core/tools/: __init__.py  base.py  code.py  filesystem.py  project.py  schemas.py  shell.py  web.py
codex/legacy/widgets/: __init__.py  chat_panel.py  file_tree.py  model_selector.py  terminal_panel.py
codex/screens/: __init__.py  confirmation_dialog.py  main_screen.py  model_edit_dialog.py  splash_screen.py
codex/styles/: codex.tcss
codex/ui/: __init__.py
codex/ui/screens/: __init__.py  code_block_dialog.py  confirmation_dialog.py  copy_view_dialog.py  main_screen.py  model_edit_dialog.py  (+3 more)
codex/utils/: __init__.py  clipboard.py  logger.py  markdown.py
codex/widgets/: __init__.py  chat_panel.py  code_view.py  diff_panel.py  file_tree.py  model_selector.py  terminal_panel.py
hakimi_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+1 files in other folders)
