[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hakimi-cli"
version = "0.1.0"
description = "现代化 AI 代码助手 CLI 工具"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Hakimi Team"}
]
keywords = ["ai", "cli", "code", "assistant", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "textual>=0.52.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "toml>=0.10.2",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
hakimi = "codex.__main__:main"

[project.urls]
Homepage = "https://github.com/hakimi-team/hakimi-cli"
Repository = "https://github.com/hakimi-team/hakimi-cli"
